--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/media.css" />
+
     <title>Wed Studio</title>
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
           <a class="logo link" href="./index.html"
@@ -69,17 +71,17 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
       <!--main phrase-->
-      <section class="quote">
+      <!-- <section class="quote">
         <div class="container quote-container">
           <h1 class="quote-title">Effective Solutions for Your Business</h1>
           <button class="quote-button" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
       <!--advantages-->
       <section class="advantages">
         <div class="advantages-container container">
@@ -168,8 +170,7 @@
           </ul>
         </div>
       </section>
-      <!--our team
--->
+      <!--our team-->
       <section class="team">
         <div class="container team-container">
           <h2 class="our-team">Our Team</h2>
@@ -592,7 +593,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-icon" width="8" height="8">
@@ -676,6 +677,6 @@
         </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script> -->
   </body>
 </html>
