--- a/index.html
+++ b/index.html
@@ -583,12 +583,14 @@
                 placeholder="E-mail"
               />
             </label>
-            <button class="footer-form-btn" type="submit">
-              Subscribe
-              <svg class="footer-btn-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-frame-3"></use>
-              </svg>
-            </button>
+            <div class="footer-btn">
+              <button class="footer-form-btn" type="submit">
+                Subscribe
+                <svg class="footer-btn-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-frame-3"></use>
+                </svg>
+              </button>
+            </div>
           </form>
         </div>
       </div>
