--- a/index.html
+++ b/index.html
@@ -512,65 +512,67 @@
     </main>
     <footer class="bottom">
       <div class="container bottom-container">
-        <div class="bottom-container-item">
-          <a class="bottom-logo link" href="./index.html"
-            >Web<span class="bottom-logo-section">Studio</span></a
-          >
-          <p class="bottom-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="bottom-container-social">
-          <p class="bottom-social-media">Social media</p>
-          <ul class="list bottom-social">
-            <li class="bottom-social-item">
-              <a
-                class="bottom-social-link"
-                href=""
-                aria-label="instagram"
-                target="_blank"
-                rel="noopener no-referrer"
-              >
-                <svg class="bottom-social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="bottom-social-item">
-              <a
-                class="bottom-social-link"
-                href=""
-                aria-label="twitter"
-                target="_blank"
-                rel="noopener no-referrer"
-                ><svg class="bottom-social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter-1"></use></svg
-              ></a>
-            </li>
-            <li class="bottom-social-item">
-              <a
-                class="bottom-social-link"
-                href=""
-                aria-label="facebook"
-                target="_blank"
-                rel="noopener no-referrer"
-                ><svg class="bottom-social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook-1"></use></svg
-              ></a>
-            </li>
-            <li class="bottom-social-item">
-              <a
-                class="bottom-social-link"
-                href=""
-                aria-label="linkedin"
-                target="_blank"
-                rel="noopener no-referrer"
-                ><svg class="bottom-social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin-1"></use></svg
-              ></a>
-            </li>
-          </ul>
+        <div class="bottom-tablet">
+          <div class="bottom-container-item">
+            <a class="bottom-logo link" href="./index.html"
+              >Web<span class="bottom-logo-section">Studio</span></a
+            >
+            <p class="bottom-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="bottom-container-social">
+            <p class="bottom-social-media">Social media</p>
+            <ul class="list bottom-social">
+              <li class="bottom-social-item">
+                <a
+                  class="bottom-social-link"
+                  href=""
+                  aria-label="instagram"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                >
+                  <svg class="bottom-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="bottom-social-item">
+                <a
+                  class="bottom-social-link"
+                  href=""
+                  aria-label="twitter"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                  ><svg class="bottom-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter-1"></use></svg
+                ></a>
+              </li>
+              <li class="bottom-social-item">
+                <a
+                  class="bottom-social-link"
+                  href=""
+                  aria-label="facebook"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                  ><svg class="bottom-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook-1"></use></svg
+                ></a>
+              </li>
+              <li class="bottom-social-item">
+                <a
+                  class="bottom-social-link"
+                  href=""
+                  aria-label="linkedin"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                  ><svg class="bottom-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use></svg
+                ></a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="bottom-email">
           <p class="bottom-email-text">Subscribe</p>
