--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
     </header> -->
     <main>
       <!--main phrase-->
-      <!-- <section class="quote">
+      <section class="quote">
         <div class="container quote-container">
           <h1 class="quote-title">Effective Solutions for Your Business</h1>
           <button class="quote-button" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
       <!--advantages-->
       <section class="advantages">
         <div class="advantages-container container">
@@ -145,6 +145,7 @@
           <ul class="portfolio-list list">
             <li class="portfolio-item">
               <img
+                srcset="./images/img1.jpg 1x, ./images/img-2x.jpg 2x"
                 src="./images/img1.jpg"
                 alt="statistical graphs on the monitor"
                 width="360"
@@ -153,6 +154,7 @@
             </li>
             <li class="portfolio-item">
               <img
+                srcset="./images/img2.jpg 1x, ./images/img2-2x.jpg 2x"
                 src="./images/img2.jpg"
                 alt="an application with a messenger function"
                 width="360"
@@ -161,6 +163,7 @@
             </li>
             <li class="portfolio-item">
               <img
+                srcset="./images/img3.jpg 1x, ./images/img3-2x.jpg 2x"
                 src="./images/img3.jpg"
                 alt="adaptation for different devices"
                 width="360"
@@ -177,6 +180,7 @@
           <ul class="team-list list">
             <li class="team-item">
               <img
+                srcset="./images/photo.jpg 1x, ./images/photo-2x-min.jpg 2x"
                 src="./images/photo.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -243,6 +247,7 @@
             </li>
             <li class="team-item">
               <img
+                srcset="./images/photo1.jpg 1x, ./images/photo1-2x-min.jpg 2x"
                 src="./images/photo1.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -309,6 +314,7 @@
             </li>
             <li class="team-item">
               <img
+                srcset="./images/photo2.jpg 1x, ./images/photo2-2x-min.jpg 2x"
                 src="./images/photo2.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -375,6 +381,7 @@
             </li>
             <li class="team-item">
               <img
+                srcset="./images/photo3.jpg 1x, ./images/photo3-2x-min.jpg 2x"
                 src="./images/photo3.jpg"
                 alt="Daniel Wilson"
                 width="264"
