--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Wed Studio</title>
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
           <a class="logo link" href="./index.html"
@@ -70,8 +70,13 @@
             </li>
           </ul>
         </address>
+        <button class="menu-open-btn" type="button">
+          <svg class="header-icon-svg" width="32" height="22">
+            <use href="./images/icons.svg#icon-checkbox"></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+    </header>
     <main>
       <!--main phrase-->
       <section class="quote">
